--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,10 +2,10 @@ FROM alpine:3.15
 
 RUN apk --update add nginx openssl && rm -rf /var/cache/apk/*
 
-RUN sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -subj "/C=DE/ST=Niedersachsen/L=Wolfsburg/O=42Wolfsburg/CN=kmilchev" \
     -keyout /etc/ssl/nginx-selfsigned.key \
-    -out /etc/ssl/certs/nginx-selfsigned.crt
-    -subj "/C=DE/ST=Niedersachsen/L=Wolfsburg/O=42Wolfsburg/CN=kmilchev"
+    -out /etc/ssl/nginx-selfsigned.crt 
 
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
