can be composed but i get bad gatewat 502 error

--- a/srcs/.env
+++ b/srcs/.env
@@ -13,6 +13,7 @@ WORDPRESS_URL=kmilchev.42.fr
 WORDPRESS_DB_NAME=db_inception
 WORDPRESS_DB_USER=wpdbuser
 WORDPRESS_DB_PASSWORD=password
+WORDPRESS_DB_HOST=mariadb
 
 #WP ADMIN
 WORDPRESS_ADMIN_LOGIN=Voldemort
