--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,13 @@
 FROM alpine:3.15
 
-RUN apk --update add nginx openssl && rm -rf /var/cache/apk/*
+RUN apk --update add mariadb mariadb-client
 
+COPY conf/initfile.sql /initfile.sql
 
+COPY conf/my.cnf /my.cnf
+
+COPY conf/init_db.sh /init_db.sh
 
 EXPOSE 3306
 
-CMD ["mysql"]
+ENTRYPOINT ["sh", "./init_db.sh"]
