--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,7 +4,7 @@ http
 {
     listen 443 ssl;
     listen [::]:443 ssl;
-    # allow 0.0.0.0/0; #not sure what this one is about
+    allow 0.0.0.0/0; #not sure what this one is about
     server_name kmilchev.42.fr;
 
     ssl_certificate     /etc/ssl/nginx-selfsigned.crt;
@@ -14,8 +14,6 @@ http
     root /var/www/html;
     index index.php index.html;
 
-    access_log /var/log/nginx/hakase-access.log; #will se about these two
-    error_log /var/log/nginx/hakase-error.log;
 
     location / 
     {
@@ -37,7 +35,7 @@ http
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        # fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
 }
