--- a/srcs/.env
+++ b/srcs/.env
@@ -1,24 +1,2 @@
-#MYSQL
-MYSQL_ROOT_PASSWORD=Thisisapassphrase!
-MYSQL_USER=kmilchev
-MYSQL_USER_PASSWORD=Passphrase
-
-#WORDPRESS
-WORDPRESS_TITLE=My Second Site
-WORDPRESS_URL=kmilchev.42.fr
-
-#WP_DB
-WORDPRESS_DB_HOST=mariadb
-WORDPRESS_DB_USER=wpdbuser
-WORDPRESS_DB_PASSWORD=password
-WORDPRESS_DB_NAME=db_inception
-
-#WP ADMIN
-WORDPRESS_ADMIN_LOGIN=Voldemort
-WORDPRESS_ADMIN_PASSWORD=Expeliarmus
-WORDPReSS_ADMIN_MAIL=voldi@42wolfsburg.de
-
-#WP USER
-WORDPRESS_USER_LOGIN=kmilchev
-WORDPRESS_USER_PASSWORD=PiertotumLocomotor
-WORDPReSS_USER_MAIL=voldi@42wolfsburg.de
+MYSQL_ROOT_PW=6429
+MYSQL_DB=wordpress
