--- a/srcs/requirements_old/nginx/conf/nginx.conf
+++ b/srcs/requirements_old/nginx/conf/nginx.conf
@@ -1,18 +1,19 @@
 http
 {
+    include /etc/nginx/mime.types;
     server 
 {
     listen 443 ssl;
     listen [::]:443 ssl;
     allow 0.0.0.0/0; #not sure what this one is about
     server_name kmilchev.42.fr;
+    root /var/www/html;
+    index index.php index.html;
 
     ssl_certificate     /etc/ssl/nginx-selfsigned.crt;
     ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
     ssl_protocols       TLSv1.3;
 
-    root /var/www/html;
-    index index.php index.html;
 
 
     location / 
