--- a/srcs/.env
+++ b/srcs/.env
@@ -1,2 +1,11 @@
-MYSQL_ROOT_PW=6429
-MYSQL_DB=wordpress
+MYSQL_ROOT_PASSWORD=4242
+MYSQL_DATABASE=wordpress
+
+WP_URL=kmilchev.42.fr
+WP_TITLE=Yes
+WP_ADMIN_LOGIN=Krisi
+WP_ADMIN_PASSWORD=Parola
+WP_ADMIN_MAIL=k@email.com
+WP_USER_LOGIN=Boring
+WP_USER_MAIL=b@mail.com
+WP_USER_PASSWORD=Parola
