--- a/srcs/requirements/nginx/conf/file.conf
+++ b/srcs/requirements/nginx/conf/file.conf
@@ -1,6 +1,6 @@
 server {
 	listen 443 ssl;
-	server_name kpucylo.42.fr;
+	server_name kmilchev.42.fr;
 	root /var/www/html;
 	index index.html index.php;
 	ssl_protocols TLSv1.2;
